# workflow-templates

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  project-board.yml  sync-labels.yml
deployment/: README.md
deployment/configs/: nginx.conf.template
deployment/docker/: docker-compose.prod.yml
deployment/scripts/: deploy.sh
git/: commit-template.txt  global-gitignore
project-initializer/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
project-initializer/.github/workflows/: project-init.yml
project-initializer/curio_curation/config/: config.yml
project-initializer/curio_curation/src/: auth.py  project_initializer.py  test_setup.py
project-initializer/project_init/docs/: SAMPLE_BUSINESS_PLAN.md
project-initializer/project_init/src/: auth.py  project_initializer.py  test_auth.py
project-templates/general/: README.md
project-templates/javascript/: package.json
project-templates/python/: README.md  requirements.txt
